--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <a href="#news">News</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
+
+        <input type="text" placeholder="Search..">
     </div>
     
 </body>
